# gia

./: .gitignore  CLAUDE.md  Cargo.toml  INTEGRATION_TESTS.md  LICENSE  README.md  agent.md  compile_gui.bat  examples-from-practice.md  examples.sh  gia-flow-diagram.md  giagui.ahk  plan.md  winget_research.md
.github/workflows/: build-windows.yml  manual-release.yml
gia/: Cargo.toml  build.rs
gia/src/: api_key.rs  app.rs  audio.rs  browser_preview.rs  cli.rs  clipboard.rs  constants.rs  content_part_wrapper.rs  conversation.rs  gemini.rs  image.rs  input.rs  logging.rs  main.rs  mcp_client.rs  ollama.rs  output.rs  provider.rs  role.rs  spinner.rs
gia/src/tools/: executor.rs  implementations.rs  mod.rs  registry.rs  security.rs
gia/tests/: cli_tests.rs  mcp_client_test.rs
gia/tests/common/: mod.rs
giagui/: Cargo.toml
giagui/src/: main.rs
giagui/tests/: gui_integration.rs
giagui/tests/common/: mod.rs
icons/: gia.xcf
src/: api_key.rs  app.rs  audio.rs  browser_preview.rs  cli.rs  clipboard.rs  constants.rs  conversation.rs  gemini.rs  image.rs  input.rs  logging.rs  main.rs  mcp.rs  output.rs  provider.rs  role.rs  tools.rs
tasks/: phase1-mcp-summary.md  prd-mcp-client-integration.md  task-list-mcp-client.md
