[package]
name = "gia"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "fs", "process"] }
genai = "0.1"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
arboard = "3.2"
webbrowser = "0.8"
rand = "0.8"
serial_test = "3.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
tempfile = "3.0"
base64 = "0.22"
comrak = "0.28"
whoami = "1.4"
image = "0.25"
atty = "0.2"
markdown_to_text = "1.0"

[profile.release]
opt-level = "z"        # Optimize for size
lto = true             # Link-time optimization
codegen-units = 1      # Single codegen unit for better optimization
panic = "abort"        # Abort on panic (smaller than unwinding)
strip = true           # Strip symbols from binary