[workspace]
members = ["gia", "giagui"]
resolver = "2"

[profile.release]
opt-level = "z"        # Optimize for size
lto = true             # Link-time optimization
codegen-units = 1      # Single codegen unit for better optimization
panic = "abort"        # Abort on panic (smaller than unwinding)
strip = true           # Strip symbols from binary
