[package]
name = "gia"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "fs", "process"] }
genai = "0.4"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
clap_complete = "4.0"
clap_complete_nushell = "4.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
arboard = "3.2"
webbrowser = "0.8"
rand = "0.8"
serial_test = "3.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
tempfile = "3.0"
base64 = "0.22"
comrak = "0.28"
whoami = "1.4"
image = "0.25"
atty = "0.2"
markdown_to_text = "1.0"
regex = "1.0"
tabwriter = "1.4"
native-dialog = "0.7"
html-escape = "0.2"
textwrap = "0.16"
encoding_rs = "0.8"
chardetng = "0.1"
tts = "0.26"
notify-rust = "4.11"
cpal = "0.15"
hound = "3.5"
ogg-opus = "0.1"
rubato = "0.16"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3.0"
