[package]
name = "giagui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31"
egui = "0.31"
arboard = "3.4"
image = "0.25"
dirs = "5.0"
notify-rust = "4.11"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
